syntax = "proto3";

package command;

message ClientPlayerMsgData{
     uint64 playerId=1;
     bytes data=2;
     string clientAddr=3;
}

message GatewayMsgToOnline{
    string remoteAddr =1;//
    bytes data =2;//
}

message OnlineMsgToGateway {
    string remoteAddr =1;
    bytes data =2;
}